--- a/finalproject.html
+++ b/finalproject.html
@@ -51,7 +51,7 @@
 				<article>
 					<!--What to expect section-->
 						<h1 id="Whattoexpect">What to expect</h1>
-						<p>You may have some questions about our club. Here's what you can expect when you check us out:</p> <!--<span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>.-->
+						<p>You may have some questions about our club. Here's how we roll:</p>
 						<ul>
 							<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
 							<li>Flexibility — attend every month or once a year</li>
@@ -62,7 +62,6 @@
 							<li>A warm, friendly group where all voices are valued</li>
 							<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
 						</ul> 
-						<p>maybe a closing statement here</p>
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
 						<figure class="dogreadingbook">
@@ -82,10 +81,13 @@
 					<p>What's not to like? Whether you’re a lifelong reader or just getting started, we’d love to have you.</p>
 					<!--Learn more section-->
 						<h3 id="learnmore">Learn more</h3>
-						<p>There are several ways to learn more about us. Our meetings are included on the Indian Trails Public Library District's <span style="color: blue;">Events calendar</span>. <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>.</p>
-						<p>You can meet some of our members on our About us page</p>
-						<p>You can check out some of our favorite books on our Greatest hits page</p>
-						<p>You can learn about the One Book One Community program and this year's selection, Hello Beautiful by Ann Napolitano, on our One book page</p>
+						<p>There are several ways to learn more about us. 
+						<ul>
+							<li>Our meetings are included on the Indian Trails Public Library District's <span style="color: blue;">Events calendar</span>. <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>.</li>
+							<li>You can meet some of our members on our About us page</li>
+							<li>You can check out some of our favorite books on our Greatest hits page</li>
+							<li>You can learn about the One Book One Community program and this year's selection, Hello Beautiful by Ann Napolitano, on our One book page</li>
+						</ul> 		
 				</article>
 		</main>
 		<footer id="page-footer">
