--- a/obocpage.html
+++ b/obocpage.html
@@ -44,8 +44,8 @@
 					<figure class="header-helloB">
 						<img alt="Cropped view of colorful Hello Beautiful dust jacket highlighting woman's eyes." src="images/HelloBBigIMG.png">
 					</figure>
-					<p>One Book, One Community (OBOC) is a cooperative reading-and-discussion initiative run jointly by the Cook Memorial Public Library District, Indian Trails Public Library District, and Vernon Area Public Library District. Its goal is to encourage dialogue and strengthen community by having residents from across multiple suburbs read the same book during the program period, then come together (in-person or virtually) for book discussions and related events. The program emphasizes inclusivity — events are open to all, regardless of which library you belong to.</p>
-					<p>At the start of the program, each participating library distributes free copies of the selected book (while supplies last). Over the following weeks, there will be scheduled public events that tie into the book: group discussions, lectures, workshops, and art- or culture-related programs (sometimes loosely connected to the book’s themes, locale, or subject). The season will wrap up with an author event (live or via Zoom) with the book’s author.</p>
+					<p>One Book, One Community (OBOC) is a cooperative reading-and-discussion initiative run jointly by the Cook Memorial Public Library District, Indian Trails Public Library District, and Vernon Area Public Library District. Its goal is to encourage dialogue and strengthen community by having residents from across multiple suburbs read the same book during the program period, then come together (in-person or virtually) for book discussions and related events. Events are open to all.</p>
+					<p>At the start of the program, each participating library distributes free copies of the selected book (while supplies last). Over the following weeks, there will be scheduled public events that tie into the book: group discussions, lectures, workshops, and art- or culture-related programs. The season will wrap up with an author event (live or via Zoom) with the book’s author.</p>
 					<p>The Whippoorwills will be discussing the book at our February meeting. Check OBOC out at their <a href="https://www.1book.org/book.html" alt="go to the one book website">website</a> today!</p>
 				</header>
     		</article>
@@ -62,8 +62,7 @@
 							<img alt="Movie poster from the 2019 film Little Women, featuring a view of Jo played by Saorise Ronan." src="images/LittleWomenFilmIMG.png">
 						</figure>
 						<p>Little Women tells the story of the four March sisters—responsible Meg, independent Jo, gentle Beth, and artistic Amy—as they come of age during the American Civil War. Despite financial hardship, the girls navigate friendship, family struggles, budding ambitions, and first loves. Jo strives to become a writer, Meg dreams of a stable home life, Beth’s kindness shapes the family, and Amy matures into a confident young woman.</p>
-						<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful.</p>	
-						<p>Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition—especially for women—and the idea that love can take many forms beyond romance.</p>
+						<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful. Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition, and the idea that love can take many forms beyond romance.</p>
 					<!--Films content-->
 						<h4 id="LWMovies">Little Women in film</h4>
 						<p>Did you know there are multiple film versions of Little Women? Enhance your reading of Hello Beautiful and Alcott's novel with a movie night. You can find many of these films on DVD and/or Bluray at the library:</p>
