--- a/finalproject.html
+++ b/finalproject.html
@@ -52,6 +52,9 @@
 					<!--What to expect section-->
 						<h1 id="Whattoexpect">What to expect</h1>
 						<p>You may have some questions about our club. Here's how we roll:</p>
+						<figure class="dogreadingbook">
+							<img alt="cartoon picture of dog with paws on an open book reading." src="images/dogreadingbook.jpg">	
+						</figure>
 						<ul>
 							<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
 							<li>Flexibility — attend every month or once a year</li>
@@ -64,9 +67,9 @@
 						</ul> 
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
-						<figure class="dogreadingbook">
+						<!--<figure class="dogreadingbook">
 							<img alt="cartoon picture of dog with paws on an open book reading." src="images/dogreadingbook.jpg">	
-						</figure>
+						</figure>-->
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
 						<ul>
 							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own</li>
@@ -86,7 +89,7 @@
 							<li>Our meetings are included on the Indian Trails Public Library District's <span style="color: blue;">Events calendar</span>. <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>.</li>
 							<li>You can meet some of our members on our About us page</li>
 							<li>You can check out some of our favorite books on our Greatest hits page</li>
-							<li>You can learn about the One Book One Community program and this year's selection, Hello Beautiful by Ann Napolitano, on our One book page</li>
+							<li>You can learn about the One Book One Community program and this year's selection, <span class="booktitleanimation">Hello Beautiful</span> by Ann Napolitano, on our One book page</li>
 						</ul> 		
 				</article>
 		</main>
