--- a/obocpage.html
+++ b/obocpage.html
@@ -81,7 +81,7 @@
 				<ul> <!--can add classes here later-->
 					<li><a href="#obocpage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC main page</a></li>
-					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
+					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
 			</nav>
