--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -91,14 +91,13 @@
 				<ul>
 					<li><a href="#greatestpage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC main page</a></li>
-					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
+					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
 			</nav>
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
-			<p><i>Book jacket images are screenshots of images from the Amazon website</i></p>
-			<p><i>Book descriptions are slightly condensed versions of Kirkus Reviews content</i>
-			<p><i>Cat sitting on a shelf of books</i>, Image by (Natalie_) via iStock (ID: 905536612), <a href="https://www.istockphoto.com/help/licenses" target="_blank">Standard License</a></p>
+			<p><i>Book jacket images</i> are screenshots of images from <a href="https://www.amazon.com/" target="_blank">Amazon.com</a></p>
+			<p><i>Book descriptions</i> are condensed versions of <a href="https://www.kirkusreviews.com/" target="_blank">Kirkus Reviews</a> content</p>
 			<p><i>Introduction paragraph</i> written with help from OpenAI's ChatGPT <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
 			
 		</footer>
