--- a/finalproject.html
+++ b/finalproject.html
@@ -101,9 +101,9 @@
 				</ul>
 			</nav>
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
-			<p><i>Cat sleeping on a pile of books</i>, Image by (Hovee, Nate) via iStock (Asset ID: 1271623554), Editorial use only</p>
-			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
-			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
+			<p><i>Cat sitting on a shelf of books</i>, Image by Natalie_ via iStock (ID: 905536612), <a href="https://www.istockphoto.com/help/licenses" target="_blank">Standard License</a></p>
+			<p><i>Dog reading a book</i>, AI-generated image using OpenAI's ChatGPT, <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
+			<p><i>Dog reading a book</i>, Original image by Image by someone via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
 		</footer>
 	</body>
 </html>
