--- a/finalproject.html
+++ b/finalproject.html
@@ -102,8 +102,8 @@
 			</nav>
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Cat sitting on a shelf of books</i>, Image by Natalie_ via iStock (ID: 905536612), <a href="https://www.istockphoto.com/help/licenses" target="_blank">Standard License</a></p>
-			<p><i>Dog reading a book</i>, AI-generated image using OpenAI's ChatGPT, <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
-			<p><i>Dog reading a book</i>, Original image by Image by someone via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
+			<p><i>Dog reading a book</i>, AI-generated image (based on original photo cited below) using OpenAI's ChatGPT, <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
+			<p><i>Dog lying on bed with book</i>, Original image by Samson Katt via Pexels (ID: 5255254), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
 		</footer>
 	</body>
 </html>
