--- a/finalproject.html
+++ b/finalproject.html
@@ -59,10 +59,10 @@
 							<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
 							<li>Flexibility — attend every month or once a year</li>
 							<li>Books reserved for you ahead of time — read at your own pace</li>
-							<li>You don’t have to be an Indian Trails Library member/cardholder to participate</li>
+							<li>You don’t have to be an library member/cardholder to participate</li>
 							<li>You don’t have to finish the book to join the discussion</li>
-							<li>Engaging discussions about characters, themes, ideas, and perspectives</li>
-							<li>A warm, friendly group where all voices are valued</li>
+							<li>Engaging discussions about characters, themes, and perspectives</li>
+							<li>A friendly group where all voices are valued</li>
 							<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
 						</ul> 
 					<!--Why join us section-->
