--- a/finalproject.html
+++ b/finalproject.html
@@ -19,8 +19,8 @@
     		<article>
       			<header>
 					<!--<h1 id="mainpage-title">The Whippoorwill Book Club<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/></h1>just not a fan of the logo-->
-					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
-					<h2 id="page-subtitle">Reading, conversation, and community at the library</h2>
+					<h1 id="mainpage-title">Whippoorwill Book Club</h1>
+					<h2 id="page-subtitle">Reading.Conversation.Community</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
