--- a/finalproject.html
+++ b/finalproject.html
@@ -44,7 +44,7 @@
 					<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a shelf of books." src="images/catandbooksdrawing.jpg">
 					</figure>
-					<p>Join our monthly Library Book Club, a welcoming community of readers who enjoy thoughtful conversation and the shared experience of great books. We meet once a month to explore literary fiction—from contemporary award-winners to timeless classics—with an occasional nonfiction title that sparks curiosity and discussion.</p>
+					<p>Welcome to the Whippoorwill Book Club, a welcoming community of readers who enjoy thoughtful conversation and the shared experience of great books. We meet once a month to explore literary fiction—from contemporary award-winners to timeless classics—with an occasional nonfiction title that sparks curiosity and discussion.</p>
 					<p>Our group is friendly, relaxed, and always open to new members. Whether you love diving deep into characters and themes or simply enjoy discovering new stories with others, you’ll find a place here. Come for the books, stay for the community, and be part of engaging conversations that connect us through the joy of reading.</p>
 				</header>
     		</article>
