--- a/obocpage.html
+++ b/obocpage.html
@@ -18,10 +18,9 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="obocpage-title">Whippoorwill & One Book One Community</h1>
-					<h2 id="page-subtitle">Our Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>
-					<!--<h2 id="page-subtitle">Our Celebration of <span style="color: blue;">Hello Beautiful</span></h2>-->
-					<!--<p>Posted by: WBC</p>-->
+					<h1 id="obocpage-title">Whippoorwill One Book</h1>
+					<h2 id="page-subtitle">A Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>
+					<<p>Posted by: WBC</p>
 					<nav>
 						<ul class="menu-items">
 							<li class="menu-items-opt home">
@@ -49,32 +48,31 @@
 					<p>The Whippoorwills will be discussing the book at our February meeting. Check OBOC out at their <a href="https://www.1book.org/book.html" alt="go to the one book website">website</a> today!</p>
 				</header>
     		</article>
-				<article>
-				<!--<p>-->
-					<!--Hello Beautiful content-->
-						<h2 id="hellobeautiful">Hello Beautiful (Ann Napolitano, 2023)</h2>
-						<p>Drawn into the orbit of a tightknit family upon falling for Julia, the eldest of the four Padavano sisters, William Waters experiences the kind of family solidarity, affection, and sense of belonging he never had with his own dysfunctional parents. William developed an (initially) effective coping strategy during his lonely childhood and devotes his energies toward succeeding in the only place he feels comfortable: the basketball court. College sweethearts, Julia and William marry and begin a life together directed mostly by Julia’s wishes for stability and status; the plan and relationship are derailed by William’s gradual decline into a crippling depression. Julia and William divorce, and William distances himself from their infant daughter, Alice, too.</p>
-						<p>Relationships between and among William and all of the Padavanos rupture and realign over the ensuing decades as Napolitano spins a saga of familial love, deception, and hope for healing while adeptly highlighting each family member’s unique position in the narrative. Each of the Padavano girls is finely described—there's Julia, who's straightforward and driven; Sylvie, dreamy and romantic; and twins Cecelia (artistic) and Emeline (the sensitive moral compass of the group)—and it is entirely plausible that the girls envision themselves from time to time as the March sisters from Little Women. (Rounding out that parallel is the presence of a dreamy, poetic father and a hardworking, long-suffering mother.)</p>
-						<p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/ann-napolitano/hello-beautiful/" target="_blank">Kirkus Reviews</a></p>
-					<!--Little Women content-->
-						<h3 id="littlewomen">Little Women (Louisa May Alcott, 1858)</h3>
-						<figure class="littlewomenfilm">
-							<img alt="Movie poster from the 2019 film Little Women, featuring a view of Jo played by Saorise Ronan." src="images/LittleWomenFilmIMG.png">
-						</figure>
-						<p>Little Women tells the story of the four March sisters—responsible Meg, independent Jo, gentle Beth, and artistic Amy—as they come of age during the American Civil War. Despite financial hardship, the girls navigate friendship, family struggles, budding ambitions, and first loves. Jo strives to become a writer, Meg dreams of a stable home life, Beth’s kindness shapes the family, and Amy matures into a confident young woman.</p>
-						<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful. Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition, and the idea that love can take many forms beyond romance.</p>
-					<!--Films content-->
-						<h4 id="LWMovies">Little Women in film</h4>
-						<p>Did you know there are multiple film versions of Little Women? Enhance your reading of Hello Beautiful and Alcott's novel with a movie night. You can find many of these films on DVD and/or Bluray at the library:</p>
-	          			<ul>
-							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019."><i>Little Women</i> (Greta Gerwig, 2019) with Saoirse Ronan, Emma Watson, and Timothee Chalamet</a></li>
-				  			<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017."><i>Little Women</i> (BBC mini-series) (Vanessa Caswill, 2017)</a></li>
-							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994."><i>Little Women</i> (Gillian Armstrong, 1994) with Winona Ryder and Susan Sarandon</a></li>
-							<li><a alt="Little Women, a film directed by Mervyn LeRoy in 1949"><i>Little Women</i> (Mervyn LeRoy, 1949)</a></li>
-							<li><a alt="Little Women, a film directed by George Cukor in 1933"><i>Little Women</i> (George Cukor, 1933)</a></li>
-							<li><a alt="Little Women, two silent films released in 1917 and 1918"><i>Little Women</i> (silent films, 1917 and 1918)</a></li>
-						</ul>
-				</article>
+			<article>
+				<!--Hello Beautiful content-->
+					<h2 id="hellobeautiful">Hello Beautiful (Ann Napolitano, 2023)</h2>
+					<p>Drawn into the orbit of a tightknit family upon falling for Julia, the eldest of the four Padavano sisters, William Waters experiences the kind of family solidarity, affection, and sense of belonging he never had with his own dysfunctional parents. William developed an (initially) effective coping strategy during his lonely childhood and devotes his energies toward succeeding in the only place he feels comfortable: the basketball court. College sweethearts, Julia and William marry and begin a life together directed mostly by Julia’s wishes for stability and status; the plan and relationship are derailed by William’s gradual decline into a crippling depression. Julia and William divorce, and William distances himself from their infant daughter, Alice, too.</p>
+					<p>Relationships between and among William and all of the Padavanos rupture and realign over the ensuing decades as Napolitano spins a saga of familial love, deception, and hope for healing while adeptly highlighting each family member’s unique position in the narrative. Each of the Padavano girls is finely described—there's Julia, who's straightforward and driven; Sylvie, dreamy and romantic; and twins Cecelia (artistic) and Emeline (the sensitive moral compass of the group)—and it is entirely plausible that the girls envision themselves from time to time as the March sisters from Little Women. (Rounding out that parallel is the presence of a dreamy, poetic father and a hardworking, long-suffering mother.)</p>
+					<p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/ann-napolitano/hello-beautiful/" target="_blank">Kirkus Reviews</a></p>
+				<!--Little Women content-->
+					<h3 id="littlewomen">Little Women (Louisa May Alcott, 1858)</h3>
+					<figure class="littlewomenfilm">
+						<img alt="Movie poster from the 2019 film Little Women, featuring a view of Jo played by Saorise Ronan." src="images/LittleWomenFilmIMG.png">
+					</figure>
+					<p>Little Women tells the story of the four March sisters—responsible Meg, independent Jo, gentle Beth, and artistic Amy—as they come of age during the American Civil War. Despite financial hardship, the girls navigate friendship, family struggles, budding ambitions, and first loves. Jo strives to become a writer, Meg dreams of a stable home life, Beth’s kindness shapes the family, and Amy matures into a confident young woman.</p>
+					<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful. Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition, and the idea that love can take many forms beyond romance.</p>
+				<!--Films content-->
+					<h4 id="LWMovies">Little Women in film</h4>
+					<p>Did you know there are multiple film versions of Little Women? Enhance your reading of Hello Beautiful and Alcott's novel with a movie night. You can find many of these films on DVD and/or Bluray at the library:</p>
+	          		<ul>
+						<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019."><i>Little Women</i> (Greta Gerwig, 2019) with Saoirse Ronan, Emma Watson, and Timothee Chalamet</a></li>
+				  		<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017."><i>Little Women</i> (BBC mini-series) (Vanessa Caswill, 2017)</a></li>
+						<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994."><i>Little Women</i> (Gillian Armstrong, 1994) with Winona Ryder and Susan Sarandon</a></li>
+						<li><a alt="Little Women, a film directed by Mervyn LeRoy in 1949"><i>Little Women</i> (Mervyn LeRoy, 1949)</a></li>
+						<li><a alt="Little Women, a film directed by George Cukor in 1933"><i>Little Women</i> (George Cukor, 1933)</a></li>
+						<li><a alt="Little Women, two silent films released in 1917 and 1918"><i>Little Women</i> (silent films, 1917 and 1918)</a></li>
+					</ul>
+			</article>
 		</main>
 		<footer id="page-footer">
 			<nav>
