--- a/finalproject.html
+++ b/finalproject.html
@@ -20,7 +20,7 @@
       			<header>
 					<!--<h1 id="mainpage-title">The Whippoorwill Book Club<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/></h1>just not a fan of the logo-->
 					<h1 id="mainpage-title">Whippoorwill Book Club</h1>
-					<h2 id="page-subtitle">Reading — Conversation — Community</h2>
+					<h2 id="page-subtitle">Reading - Conversation — Community</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
@@ -45,7 +45,6 @@
 						<img alt="Cartoon drawing of a content cat sitting on a shelf of books." src="images/catandbooksdrawing.jpg">
 					</figure>
 					<p>Welcome to the Whippoorwill Book Club, a welcoming community of readers who enjoy thoughtful conversation and the shared experience of great books. We meet once a month to explore literary fiction—from contemporary award-winners to timeless classics—with an occasional nonfiction title that sparks curiosity and discussion.</p>
-					<p>Our group is friendly, relaxed, and always open to new members. Whether you love diving deep into characters and themes or simply enjoy discovering new stories with others, you’ll find a place here. Come for the books, stay for the community, and be part of engaging conversations that connect us through the joy of reading.</p>
 				</header>
     		</article>
 				<article>
