--- a/finalproject.html
+++ b/finalproject.html
@@ -20,7 +20,7 @@
       			<header>
 					<!--<h1 id="mainpage-title">The Whippoorwill Book Club<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/></h1>just not a fan of the logo-->
 					<h1 id="mainpage-title">Whippoorwill Book Club</h1>
-					<h2 id="page-subtitle">Reading - Conversation — Community</h2>
+					<h2 id="page-subtitle">Reading - Conversation - Community</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
@@ -85,10 +85,10 @@
 						<h3 id="learnmore">Learn more</h3>
 						<p>There are several ways to learn more about us. 
 						<ul>
-							<li>Our meetings are included on the Indian Trails Public Library District's <span style="color: blue;">Events calendar</span>. <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>.</li>
-							<li>You can meet some of our members on our About us page</li>
-							<li>You can check out some of our favorite books on our Greatest hits page</li>
-							<li>You can learn about the One Book One Community program and this year's selection, <span class="booktitleanimation">Hello Beautiful</span> by Ann Napolitano, on our One book page</li>
+							<li>Our meetings are included on the Indian Trails Public Library District's <a href="#roommap" alt="go to Indian Trails library events calendar">Events calendar</a></li>
+							<li>You can meet some of our members on our <a href="aboutuspage.html" alt="go to the Whippoorwill about us webpage">About us</a> page</li>
+							<li>You can check out some of our favorite books on our <a href="greatesthitspage.html" alt="go to the Whippoorwill greatest hits webpage">Greatest hits</a> page</li>
+							<li>You can learn about the One Book One Community program and this year's selection, <span class="booktitleanimation">Hello Beautiful</span> by Ann Napolitano, on our <a href="obocpage.html" alt="go to the Whippoorwill one book webpage">One book</a> page</li>
 						</ul> 		
 				</article>
 		</main>
