--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -59,9 +59,9 @@
 						<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
 					<!--Members-->
 					<h2 id="members">Members</h2>
-					<p>Jan loved the club so much that when she retired from teaching out-of-state, she moved back to Illinois and came to meetings again</p>
-					<p>Mary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
-					<p>Joe isn’t sure what he’s gotten himself into. Retired from teaching and his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while doing other things. When he has something to say, it’s pithy and funny</p>
+					<p>&#1F436Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again</p>
+					<p>&#1F30EMary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
+					<p>&#x1f431 Joe isn’t sure what he’s gotten himself into. When he retired from teaching, his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while walking. When he has something to say, it’s pithy and funny</p>
 					<p>Jen -  sekptical technologist something</p>
 					<p>Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
 					<p></p>
