--- a/finalproject.html
+++ b/finalproject.html
@@ -85,7 +85,7 @@
 						<h3 id="learnmore">Learn more</h3>
 						<p>There are several ways to learn more about us. 
 						<ul>
-							<li>Our meetings are included on the Indian Trails Public Library District's <a href="#roommap" alt="go to Indian Trails library events calendar">Events calendar</a></li>
+							<li>Our meetings are included on the Indian Trails Public Library District's <a href="https://www.indiantrailslibrary.org/events/" alt="go to Indian Trails library events calendar">Events calendar</a></li>
 							<li>You can meet some of our members on our <a href="aboutuspage.html" alt="go to the Whippoorwill about us webpage">About us</a> page</li>
 							<li>You can check out some of our favorite books on our <a href="greatesthitspage.html" alt="go to the Whippoorwill greatest hits webpage">Greatest hits</a> page</li>
 							<li>You can learn about the One Book One Community program and this year's selection, <span class="booktitleanimation">Hello Beautiful</span> by Ann Napolitano, on our <a href="obocpage.html" alt="go to the Whippoorwill one book webpage">One book</a> page</li>
