--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -58,14 +58,24 @@
 						<p>We love our early shoppers, but during the first hour of the SAT sale there is a 12 book limit on purchases. You may rejoin the line to enter again. The 12 book limit remains in effect until there is no line</p>
 						<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
 					<!--Members-->
-					<h2 id="members">Members</h2>
-					<p>&#1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again</p>
-					<p>&#1F30E Mary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
-					<p>&#x1f431 Joe isn’t sure what he’s gotten himself into. When he retired from teaching, his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while walking. When he has something to say, it’s pithy and funny</p>
-					<p>Jen -  sekptical technologist something</p>
-					<p>Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
-					<p></p>
-					<p></p>
+						<h2 id="members">Members</h2>
+						<p>&#1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again</p>
+						<p>&#1F30E Mary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
+						<p>&#x1f431 Joe isn’t sure what he’s gotten himself into. When he retired from teaching, his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while walking. When he has something to say, it’s pithy and funny</p>
+						<p>Jen -  sekptical technologist something</p>
+						<p>Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
+						<p></p>
+						<p></p>
+					<!--Learn more section-->
+						<h3 id="learnmore">Learn more</h3>
+						<p>There are several ways to learn more about us. 
+						<ul>
+							<!--AS WHIPPOORWILL IS AN IMAGINARY BOOK CLUB, YOU WILL NOT FIND EVENTS FOR IT ON THE ITPLD WEBSITE...JUST INCLUDING AN EXTERNAL LINK AS IF YOU COULD-->
+							<li>Our meetings are included on the Indian Trails Public Library District's <a href="https://www.indiantrailslibrary.org/events/" alt="go to Indian Trails library events calendar">Events calendar</a></li>
+							<li>You can meet some of our members on our <a href="aboutuspage.html" alt="go to the Whippoorwill about us webpage">About us</a> page</li>
+							<li>You can check out some of our favorite books on our <a href="greatesthitspage.html" alt="go to the Whippoorwill greatest hits webpage">Greatest hits</a> page</li>
+							<li>You can learn about the One Book One Community program and this year's selection, <span class="booktitleanimation">Hello Beautiful</span> by Ann Napolitano, on our <a href="obocpage.html" alt="go to the Whippoorwill one book webpage">One book</a> page</li>
+						</ul> 		
 				</article>
 		</main>
 		<footer id="page-footer">
