--- a/finalproject.html
+++ b/finalproject.html
@@ -85,6 +85,7 @@
 						<h3 id="learnmore">Learn more</h3>
 						<p>There are several ways to learn more about us. 
 						<ul>
+							<!--AS WHIPPOORWILL IS AN IMAGINARY BOOK CLUB, YOU WILL NOT FIND EVENTS FOR IT ON THE ITPLD WEBSITE...JUST INCLUDING AN EXTERNAL LINK AS IF YOU COULD-->
 							<li>Our meetings are included on the Indian Trails Public Library District's <a href="https://www.indiantrailslibrary.org/events/" alt="go to Indian Trails library events calendar">Events calendar</a></li>
 							<li>You can meet some of our members on our <a href="aboutuspage.html" alt="go to the Whippoorwill about us webpage">About us</a> page</li>
 							<li>You can check out some of our favorite books on our <a href="greatesthitspage.html" alt="go to the Whippoorwill greatest hits webpage">Greatest hits</a> page</li>
