--- a/obocpage.html
+++ b/obocpage.html
@@ -20,7 +20,7 @@
       			<header>
 					<h1 id="obocpage-title">Whippoorwill One Book</h1>
 					<h2 id="page-subtitle">A Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>
-					<p><i>Posted by: LBedner</i></p>
+					<p><i><small>Posted by: LBedner</small></i></p>
 					<nav>
 						<ul class="menu-items">
 							<li class="menu-items-opt home">
