--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -20,7 +20,7 @@
       			<header>
 					<h1 id="greatestpage-title">Whippoorwill Greatest Hits</h1>
 					<h2 id="page-subtitle">Memorable Books for Thought and Discussion</h2>
-					<!--<p>Posted by: WBC</p>-->
+					<p><i><small>Posted by: LBedner</small></i></p>
 					<nav>
 						<ul class="menu-items">
 							<li class="menu-items-opt home">
