--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -62,8 +62,8 @@
 						<p>&#x1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again</p>
 						<p>&#x1F30E Mary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
 						<p>&#x1f431 Joe isn’t sure what he’s gotten himself into. When he retired from teaching, his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while walking. When he has something to say, it’s pithy and funny</p>
-						<p>Jen -  sekptical technologist something</p>
-						<p>Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
+						<p>&#x1F3B5 Jen is a skeptical technologist and aspiring protagonist. Devoted daughter/wife/parent/friend. Volunteers in her neighborhood and sings in a choir</p>
+						<p>&#x1F47D Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
 						<p></p>
 						<p></p>
 					<!--Learn more section-->
