--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -52,20 +52,17 @@
 						<!--<figure class="main-catandbooks">
 							<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
 						</figure>-->
-						<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
-						<p>If you want first crack on SAT, we use a ticketing system to ensure smooth traffic flow. We hand out up to 2 numbered tickets per person at the Main sale door, starting at 8AM.</p>
-						<p>Your tickets reserve you places in line when the sale starts at 11AM. You are free to get coffee or check out our Children's and Bargain sales in the meantime. Just get back to the Main room a few minutes before 11AM: you'll forfeit your spot(s) if you're not present. No ticket, no problem! Just join the line and we'll let you in as soon as we can.</p>
-						<p>We love our early shoppers, but during the first hour of the SAT sale there is a 12 book limit on purchases. You may rejoin the line to enter again. The 12 book limit remains in effect until there is no line</p>
-						<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
+						<p>Founded in 1999 in the cozy living room of one of its first members, the group began as a small circle of readers who loved sharing books and lively conversation. Over time, the club grew in spirit and purpose, eventually moving to a library setting to create a more welcoming, community-focused club. While it still enjoys a dedicated core membership, the group continues to look forward—inviting new readers to join, share their perspectives, and help shape the next chapter of its history.</p>
+						<p>Come and be part of our next chapter!</p>	
 					<!--Members-->
 						<h2 id="members">Members</h2>
-						<p>&#x1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again</p>
+						<p>&#x1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again. Really dislikes Emma Bovary</p>
 						<p>&#x1F30E Mary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
 						<p>&#x1f431 Joe isn’t sure what he’s gotten himself into. When he retired from teaching, his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while walking. When he has something to say, it’s pithy and funny</p>
-						<p>&#x1F3B5 Jen is a skeptical technologist and aspiring protagonist. Devoted daughter/wife/parent/friend. Volunteers in her neighborhood and sings in a choir</p>
+						<p>&#x1F3B5 Jen is a skeptical technologist and aspiring protagonist. Devoted daughter/wife/parent/friend. Volunteers in her neighborhood and sings in two choirs</p>
 						<p>&#x1F47D Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
-						<p></p>
-						<p></p>
+						<p>&#x1F337 Lisa is reinventing herself as a librarian after many years in the technology industry. In her spare time…well, she has no spare time between her library job and library school. She would like to be cooking, taking walks, and reading more</p>
+						<p>&#x1F300 John collects rare books and has read many of the classic texts (and we mean classic…i.e. the <i>Iliad</i> and the <i>Odyssey</i>) that we haven’t managed to read in our club yet. We may get to Mary Beard’s <i>SPQR</i></p>.
 					<!--Learn more section-->
 						<h3 id="learnmore">Learn more</h3>
 						<p>There are several ways to learn more about us. 
